* Added an enabled/disabled plug to all SceneNodes. Nodes with no inputs output an empty scene when disabled, and SceneProcessors output the first input unchanged.

* Added SceneNode::hash*() methods to match the GafferScene::compute*() methods. This was necessary for the enabled plug to be implemented, and also makes the implementation of derived classes more readable. Matching pairs of hash*() and compute*() methods should be reused as a pattern throughout Gaffer where appropriate in the future.

* Renamed SceneElementProcessor::process*() methods to SceneElementProcessor::computeProcessed*() and SceneElementProcessor::hash*() methods to SceneElementProcessor::hashProcessed*(). This was necessary to resolve conflicts with the name hash*() methods at the SceneNode level.

* Removed the ability to return distant descendants from the GraphComponent::getChild() function. Also modified GraphComponent method signatures to use InternedString where appropriate. This change alone gives a 10-15% speedup in evaluating a benchmark GafferScene network.

* Added GraphComponent::descendant() method to replace the lost functionality in GraphComponent::getChild().

0.53.0
======

* Added the concept of a global format for disconnected nodes along with a format plug.

* Added the Constant node for GafferImage.

* Added the Select node for GafferImage.

* Fixed a bug which prevented Assignment nodes from being connected to Shaders outside the Box containing the Assignment.

* Improved formatting in NumericWidgets.

* Added NumericWidget.valueChangedSignal().

* Fixed bug where editing a numeric plug value using cursor up/down didn't immediately update.

* Added CompoundDataPlug::addMember() and CompoundDataPlug::addOptionalMember() overloads which take a ValuePlug instead of Data to provide the value for the member.

0.52.0
======

* The Gaffer clipboard now synchronizes with the global system clipboard, allowing nodes to be cut and pasted between external applications.
